--- a/src/components/caroussel/DownPart.css
+++ b/src/components/caroussel/DownPart.css
@@ -2,6 +2,7 @@
     position: absolute;
     background-size: cover;
     right: 0;
+    margin: 0 0 -4% 0;
     bottom: -90px;
     left:0;
     opacity: 0.1;   
@@ -10,6 +11,7 @@
     position: absolute;
     background-size: cover;
     background-position: center top;
+    margin: 0 0 -5% 0;
     right: 0;
     bottom: -70px;
     left:0;
@@ -18,6 +20,7 @@
 .bas{
     position: absolute;
     background-size: cover;
+    margin: 0 0 -3% 0;
     right: 0;
     bottom: 0;
     left:0;
