--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -26,6 +26,12 @@
     background-clip: initial;
     background-color: initial;
     padding: 5% 0;
+    margin-bottom: 10%;
 }
-    
+
+.body{
+    padding: 0 10%;
+    z-index: 250;
+}
+
     
