--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -1,50 +1,4 @@
-.glide {
-    display: flex;
-    align-items: center;
-    z-index: 500;
-  }
-  
-  .glide__track {
-    flex: 1;
-  }
-  
-  .glide__slide {
-    text-align: center;
-    height: 70px;
-    line-height: 30vh;
-    color: #fff;
-    background: rgb(136, 133, 133);
-    font-size: 1em;
-    font-weight: 900;
-  }
-  
-  .glide__slide[class*="active"] {
-    background: linear-gradient(-45deg, #ed145b, #7b31f4);
-  }
-  
-  .glide__arrows {
-    padding: 10px;
-  }
-  
-  .glide__arrow {
-    position: relative;
-    top: 0;
-    margin: 0;
-    left: 0;
-    right: 0;
-    padding: 5px;
-    background-color: red;
-    transition: all 0.2s ease-in-out;
-    height: 150px;
-  }
-  
-  .glide__arrow:hover {
-    background-color: #ed145b;
-  }
-  .glide__arrows{
-      z-index: 600;
-      height: 150px;
-  }
-  ._10XKC{
-      height: 150px !important;
-  }
+.slider{
+  background-color: brown;
+  z-index: 150000;
+}
