--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -16,7 +16,8 @@
     background-attachment: fixed;
     /* background-image: linear-gradient(#fee140,#fa709a); */
     /* background-image: linear-gradient(to top, #37ecba 0%, #72afd3 100%); */
-    background-image: linear-gradient(to top, #48c6ef 0%, #6f86d6 100%);
+    background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+    /* background-image: linear-gradient(to top, #48c6ef 0%, #6f86d6 100%); */
     background-position-x: initial;
     background-position-y: initial;
     background-size: initial;
