--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,144 +1,142 @@
-.titleHeader{
-    font-size: 30px;
-    color: white;
-    font-weight: bold;
+.titleHeader {
+  font-size: 30px;
+  color: white;
+  font-weight: bold;
 }
 
 header {
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  z-index: 150;
+  .linkContainer {
+    list-style: none;
+  }
+  ul {
     display: flex;
-    z-index: 150;
-    .linkContainer {
-        list-style: none;
-    }
-    ul {
-        display: flex;
-    }
+  }
 }
 
-a{
-    text-decoration: none;
-    background-color: transparent;
-    color: white;
+a {
+  text-decoration: none;
+  background-color: transparent;
+  color: white;
 }
 
-.linkElement{
-    margin-left: 1em;
-    transition: all 0.3s ease 0s;
-    padding: 0 5%;
+.linkElement {
+  margin-left: 1em;
+  transition: all 0.3s ease 0s;
+  padding: 0 5%;
 }
-.linkElement a:hover{
-    color: #9c27b0;    
-}
-
-.containerNavBar{
-    display:flex;
-    justify-content:space-around;
-    align-items: center;
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    margin-right: auto;
-    margin-left: auto;
-    background-color:transparent;
-    width: 100%;
-    z-index: 150;
-    padding-top: 1em;
-}     
-
-
-
-.isScrolled{
-    transition: all 0.5s ease;
-    background-color: #6f86d6;
-    z-index: 150;
+.linkElement a:hover {
+  color: #ff5b2b;
 }
 
-.isNotScrolled{
-    background-color: transparent !important;
+.containerNavBar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: transparent;
+  width: 100%;
+  z-index: 150;
+  padding: 1em 0;
 }
 
-.burgerItem{
-    padding-top: 5px;
+.isScrolled {
+  transition: all 0.5s ease;
+  background-color: #537895;
+  z-index: 150;
+}
+
+.isNotScrolled {
+  background-color: transparent !important;
+}
+
+.burgerItem {
+  padding-top: 5px;
 }
 
 .bm-burger-button {
-    position: fixed;
-    color: white;
-    width: 36px;
-    height: 30px;
-    left: 36px;
-    top: 36px;
-  }
-  
-  /* Color/shape of burger icon bars */
-  .bm-burger-bars {
-    background: #373a47;
-  }
-  
-  /* Color/shape of burger icon bars on hover*/
-  .bm-burger-bars-hover {
-    background: #a90000;
-  }
-  
-  /* Position and sizing of clickable cross button */
-  .bm-cross-button {
-    height: 24px;
-    width: 24px;
-  }
-  
-  /* Color/shape of close button cross */
-  .bm-cross {
-    background: #bdc3c7;
-  }
-  
-  /*
+  position: fixed;
+  color: white;
+  width: 36px;
+  height: 30px;
+  left: 36px;
+  top: 36px;
+}
+
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: #373a47;
+}
+
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+  background: #a90000;
+}
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #bdc3c7;
+}
+
+/*
   Sidebar wrapper styles
   Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
   */
-  .bm-menu-wrap {
-    position: fixed;
-    height: 100%;
-  }
-  
-  /* General sidebar styles */
-  .bm-menu {
-    background: #373a47;
-    padding: 2.5em 1.5em 0;
-    font-size: 1.15em;
-  }
-  
-  /* Morph shape necessary with bubble or elastic */
-  .bm-morph-shape {
-    fill: #373a47;
-  }
-  
-  /* Wrapper for item list */
-  .bm-item-list {
-    color: #b8b7ad;
-    padding: 0.8em;
-  }
-  
-  /* Individual item */
-  .bm-item {
-    display: inline-block;
-  }
-  
-  /* Styling of overlay */
-  .bm-overlay {
-    background: rgba(0, 0, 0, 0.3);
-  }
-  .bm-item {
-    display: inline-block;
-  
-    color: #d1d1d1;
-    margin-bottom: 10px;
-    text-align: left;
-    text-decoration: none;
-    transition: color 0.2s;
-  }
-  
-  .bm-item:hover {
-    color: #ffffff;
-  }
+.bm-menu-wrap {
+  position: fixed;
+  height: 100%;
+}
+
+/* General sidebar styles */
+.bm-menu {
+  background: #373a47;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+}
+
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+  fill: #373a47;
+}
+
+/* Wrapper for item list */
+.bm-item-list {
+  color: #b8b7ad;
+  padding: 0.8em;
+}
+
+/* Individual item */
+.bm-item {
+  display: inline-block;
+}
+
+/* Styling of overlay */
+.bm-overlay {
+  background: rgba(0, 0, 0, 0.3);
+}
+.bm-item {
+  display: inline-block;
+
+  color: #d1d1d1;
+  margin-bottom: 10px;
+  text-align: left;
+  text-decoration: none;
+  transition: color 0.2s;
+}
+
+.bm-item:hover {
+  color: #ffffff;
+}
